--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Core/Views/Home/Index.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Core/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = Localizer["Home Page"];
 }
 
-<partial name="_WidgetInstances" model="Model.WidgetInstances.Where(x => x.WidgetZoneId == WidgetZoneIds.HomeFeatured)" />
-
-<partial name="_WidgetInstances" model="Model.WidgetInstances.Where(x => x.WidgetZoneId == WidgetZoneIds.HomeMainContent)" />
-
-<partial name="_WidgetInstances" model="Model.WidgetInstances.Where(x => x.WidgetZoneId == WidgetZoneIds.HomeAfterMainContent)" />
-
-@*@await Component.InvokeAsync("SampleDataForm")*@
+<div class="container-fluid p-0">
+    <partial name="_WidgetInstances" model="Model.WidgetInstances.Where(x => x.WidgetZoneId == WidgetZoneIds.HomeFeatured)" />
+</div>
+<div class="container-fluid p-sm-3 p-md-4 p-lg-5 mx-auto" style="padding-top:0 !important">
+    <partial name="_WidgetInstances" model="Model.WidgetInstances.Where(x => x.WidgetZoneId == WidgetZoneIds.HomeMainContent)" />
+    <partial name="_WidgetInstances" model="Model.WidgetInstances.Where(x => x.WidgetZoneId == WidgetZoneIds.HomeAfterMainContent)" />
+</div>
