--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Comments/Views/Shared/Components/Comment/Default.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Comments/Views/Shared/Components/Comment/Default.cshtml
@@ -20,7 +20,7 @@
                     <p class="comment-guide">@Localizer["Your comment should not have personal information. 10 - 300 characters:"] {{vm.comment.commentText.length}}</p>
                 </div>
                 <div class="form-group col-md-3">
-                    <button type="submit" ng-disabled="commentForm.$invalid || vm.comment.commentText.length < 10" class="btn btn-secondary pull-right" ng-click="vm.saveComment()">@Localizer["Add Comment"]</button>
+                    <button type="submit" ng-disabled="commentForm.$invalid || vm.comment.commentText.length < 10" class="btn btn-secondary float-end" ng-click="vm.saveComment()">@Localizer["Add Comment"]</button>
                 </div>
             </div>
         </form>
@@ -36,7 +36,7 @@
             <a class="anchorjs-link " href="#comments" aria-label="Anchor" data-anchorjs-icon="#"></a>
         </div>
         <div class="col-md-6">
-            <div class="form-group has-search pull-right">
+            <div class="form-group has-search float-end">
                 <span class="fa fa-search form-control-feedback"></span>
                 <input class="form-control" ng-model="vm.search" placeholder="@Localizer["find by commenter"]" />
             </div>
@@ -78,7 +78,7 @@
                                     <p class="comment-guide">@Localizer["Your comment should not have personal information. 10 - 300 characters:"] {{item.newReply.commentText.length}}</p>
                                 </div>
                                 <div class="form-group reply-btn col-md-3">
-                                    <button type="submit" ng-disabled="replyForm.$invalid || item.newReply.commentText.length < 10" class="btn btn-secondary pull-right" ng-click="vm.saveReply(item)">@Localizer["Add Reply"]</button>
+                                    <button type="submit" ng-disabled="replyForm.$invalid || item.newReply.commentText.length < 10" class="btn btn-secondary float-end" ng-click="vm.saveReply(item)">@Localizer["Add Reply"]</button>
                                 </div>
                             </div>
                         </form>
