--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Core/Views/HomeAdmin/Index.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Core/Views/HomeAdmin/Index.cshtml
@@ -243,7 +243,7 @@
         <hr />
         <footer>
             <p class="pull-left">&copy; @DateTime.Now.Year - SimplCommerce</p>
-            <p class="pull-right">Powered by <a href="http://www.SimplCommerce.com"><strong>SimplCommerce</strong></a></p>
+            <p class="float-end">Powered by <a href="http://www.SimplCommerce.com"><strong>SimplCommerce</strong></a></p>
         </footer>
     </div>
 </body>
