--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Search/Views/Shared/Components/SearchForm/Default.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Search/Views/Shared/Components/SearchForm/Default.cshtml
@@ -7,15 +7,15 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="row no-gutters">
-                            <div class="col-auto">
+                            <div class="col-auto d-none d-sm-block pe-0">
                                 <select name="category" asp-for="Category" asp-items="Model.AvailableCategories" class="form-control text-dark">
                                     <option value="all">@Localizer["All Categories"]</option>
                                 </select>
                             </div>
-                            <div class="col">
+                            <div class="col p-0">
                                 <input type="text" name="query" asp-for="Query" class="form-control text-dark" placeholder="@Localizer["Search here..."]">
                             </div>
-                            <div class="col-auto pull-right">
+                            <div class="col-auto float-end ps-0">
                                 <button type="submit" class="btn btn-base text-dark">
                                     <i class="fa fa-search" aria-hidden="true"></i>
                                 </button>
