--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/ShoppingCart/Views/Cart/Index.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/ShoppingCart/Views/Cart/Index.cshtml
@@ -48,7 +48,7 @@
                     <textarea rows="3" class="form-control" name="orderNote" ng-model="vm.cart.orderNote" placeholder="@Localizer["Enter order note"]"></textarea>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default pull-right" ng-click="vm.saveOrderNote()">@Localizer["Save order note"]</button>
+                    <button type="submit" class="btn btn-default float-end" ng-click="vm.saveOrderNote()">@Localizer["Save order note"]</button>
                 </div>
             </form>
         </div>
