--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/ShoppingCart/Views/Shared/Components/CartBadge/Default.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/ShoppingCart/Views/Shared/Components/CartBadge/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model int
 
-<a class="cart-badge position-relative" href="~/cart" style="top:0.5em">
-    <i class="fa fa-2x fa-shopping-cart" aria-hidden="true"></i>
+<a class="cart-badge position-relative text-white me-2" href="~/cart" style="top:0.7em">
+    <i class="fa fa-shopping-cart" style="font-size:1.5rem" aria-hidden="true"></i>
     <span class="position-absolute start-100 translate-middle badge rounded-pill bg-danger">@Model
         <span class="visually-hidden">itens no carrinho</span>
     </span>
