--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Cms/Views/Shared/Components/CarouselWidget/Default.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Areas/Cms/Views/Shared/Components/CarouselWidget/Default.cshtml
@@ -22,7 +22,7 @@
                     @*<img src="@item.Image" alt="@item.Caption" class="img-fluid" />*@
                     <div class="fz-image" style="height:45vh;background-image:url('@item.Image')"></div>
                     <div class="carousel-caption d-none d-md-block">
-                        <h2 style="text-shadow:1px 1px #fff;">@item.Caption</h2>
+                        <h2 style="text-shadow:1px 1px #fff;font-weight:600;">@item.Caption</h2>
                     </div>
                 </a>
             </div>
