--- a/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Views/Shared/_Layout.cshtml
+++ b/src/SimplCommerce.WebHost/Themes/FlorDeZaya/Views/Shared/_Layout.cshtml
@@ -65,14 +65,23 @@
             </div>
             <div class="row justify-content-center" style="padding: 0 1rem  1rem  1rem">
                 <div class="col d-flex justify-content-evenly" style="max-width:30rem">
-                    <a class="text-decoration-none text-dark" style="font-size:2.2rem" href="https://www.instagram.com/flordezaya" target="_blank" title="Instagram"><i class="fa-brands fa-instagram-square"></i></a>
-                    <a class="text-decoration-none text-dark" style="font-size:2.2rem" href="https://www.facebook.com/flordezaya" target="_blank" title="Facebook"><i class="fa-brands fa-facebook-square"></i></a>
-                    <a class="text-decoration-none text-dark" style="font-size:2.2rem" href="https://api.whatsapp.com/send?phone=5511997898054" target="_blank" title="WhatsApp"><i class="fa-brands fa-whatsapp-square"></i></a>
-                    <a class="text-decoration-none text-dark" style="font-size:2.2rem" href="mailto:contato@flordezaya.com.br" target="_blank" title="Email"><i class="fa-solid fa-square-envelope"></i></a>
+                    <a class="btn-sc-media" href="https://www.instagram.com/flordezaya" target="_blank" title="Instagram"><i class="fa-brands fa-instagram-square"></i></a>
+                    <a class="btn-sc-media" href="https://www.facebook.com/flordezaya" target="_blank" title="Facebook"><i class="fa-brands fa-facebook-square"></i></a>
+                    <a class="btn-sc-media" href="https://api.whatsapp.com/send?phone=5511997898054" target="_blank" title="WhatsApp"><i class="fa-brands fa-whatsapp-square"></i></a>
+                    <a class="btn-sc-media" href="mailto:contato@flordezaya.com.br" target="_blank" title="Email"><i class="fa-solid fa-square-envelope"></i></a>
                 </div>
             </div>
         </div>
     </div>
+    <div class="bg-dark">
+        <div class="container">
+            <div class="ftr-fnt">
+                <span class="ftr-fnt-left">45.273.449/0001-61&nbsp;&nbsp;<br class="ftr-brk"/>Flor de Zaya Roupas Femininas &copy; 2022</span>
+                <span class="ftr-fnt-right">Desenvolvido por <a href="/"><strong>connexio</strong></a></span>
+            </div>
+        </div>
+    </div>
+    <button type="button" class="btn btn-lg" id="btn-back-to-top" style="opacity: 0.4"><i class="fa-solid fa-circle-up fa-2x"></i></button>
     <div id="shopModal" class="modal fade" tabindex="-1">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -85,20 +94,13 @@
             </div>
         </div>
     </div>
-    <div class="bg-dark">
-        <div class="container">
-            <div class="ftr-fnt">
-                <span class="ftr-fnt-left">45.273.449/0001-61&nbsp;&nbsp;<br class="ftr-brk"/>Flor de Zaya Roupas Femininas &copy; 2022</span>
-                <span class="ftr-fnt-right">Desenvolvido por <a href="/"><strong>connexio</strong></a></span>
-            </div>
-        </div>
-    </div>
     <script>
         window.simplGlobalSetting = {};
         window.simplGlobalSetting.lang = '@CultureInfo.CurrentCulture.Name';
     </script>
     <script simpl-append-version="true" src="~/themes/FlorDeZaya/jquery/jquery-3.6.0.min.js"></script>
     <script simpl-append-version="true" src="~/themes/FlorDeZaya/bootstrap/dist/js/bootstrap.js"></script>
+    <script simpl-append-version="true" src="~/themes/FlorDeZaya/js/site.js"></script>
     <script simpl-append-version="true" src="~/lib/matchheight/jquery.matchHeight.js"></script>
     <script simpl-append-version="true" src="~/lib/toastr/build/toastr.min.js"></script>
     <script simpl-append-version="true" src="~/lib/bootstrap-star-rating/js/star-rating.js"></script>
